# coopd

./: .gitignore  CMakeLists.txt  README.md
animal/: animal.c  animal.h  animal_p.h  cat.c  cat.h  duck.c  duck.h  exe.out  main.c
book/: book.c  book.h  main.c
bus/: bus.c  bus.h  exe.out  main.c  person.c  person.h
car/: car.c  car.h  main.c
employee/: employee.c  employee.h  main.c  person.c  person.h
motorcycle/: engine.c  engine.h  main.c  motorcycle.c  motorcycle.h
user/: main.c  person.c  person_p.h  student.c  student.h
